RESOLVED FIXED233221
REGRESSION(r285859) [GTK][WPE] a number of accessibility/* tests crash on GTK and WPE
https://bugs.webkit.org/show_bug.cgi?id=233221
Summary REGRESSION(r285859) [GTK][WPE] a number of accessibility/* tests crash on GTK...
Arcady Goldmints-Orlov
Reported 2021-11-16 16:48:50 PST
A number of accessibility tests have started crashing after r285859 added a new runtime assert to AccessibilityUIElement::create() Regressions: Unexpected crashes (12) accessibility/aria-hidden-false-works-in-subtrees.html [ Crash ] accessibility/aria-hidden-updates-alldescendants.html [ Crash ] accessibility/aria-modal-text-descendants.html [ Crash ] accessibility/auto-fill-types.html [ Crash ] accessibility/hidden-th-still-column-header.html [ Crash ] accessibility/onclick-handlers.html [ Crash ] accessibility/removed-anonymous-block-child-causes-crash.html [ Crash ] accessibility/removed-continuation-element-causes-crash.html [ Crash ] accessibility/scroll-to-make-visible-iframe-offscreen.html [ Crash ] accessibility/svg-text.html [ Crash ] accessibility/table-cell-display-block.html [ Crash ] accessibility/table-notbody.html [ Crash ]
Attachments
Patch (2.14 KB, patch)
2021-11-16 17:03 PST, Arcady Goldmints-Orlov
no flags
Patch (4.67 KB, patch)
2021-11-17 14:47 PST, Arcady Goldmints-Orlov
no flags
Patch (7.45 KB, patch)
2021-11-18 18:16 PST, Arcady Goldmints-Orlov
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-16 16:49:07 PST
Arcady Goldmints-Orlov
Comment 2 2021-11-16 17:03:13 PST
Arcady Goldmints-Orlov
Comment 3 2021-11-16 17:12:01 PST
The current version of the patch causes a couple of failures (regressions from the previous status quo), as opposed to crashes (current status quo): Regressions: Unexpected text-only failures (2) accessibility/aria-modal-text-descendants.html [ Failure ] accessibility/table-cell-display-block.html [ Failure ]
Tyler Wilcock
Comment 4 2021-11-16 17:28:44 PST
Sorry for the breakage, Arcady. I checked GTK's usage of AccessibilityUIElement::create() and it all looked OK, but clearly I missed some. Regarding the text failures: accessibility/aria-modal-text-descendants.html [ Failure ] accessibility/table-cell-display-block.html [ Failure ] https://commits.webkit.org/r285859 prevents the creation of a UI element backed by a null pointer, which always seems like the correct thing to do. Do the text differences look easily reconcilable?
Arcady Goldmints-Orlov
Comment 5 2021-11-17 14:47:08 PST
Carlos Garcia Campos
Comment 6 2021-11-18 04:43:16 PST
Comment on attachment 444583 [details] Patch We also need to handle nullptr in AccessibilityController::focusedElement().
Arcady Goldmints-Orlov
Comment 7 2021-11-18 18:16:59 PST
EWS
Comment 8 2021-11-19 01:01:46 PST
Committed r286052 (244439@main): <https://commits.webkit.org/244439@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444765 [details].
Note You need to log in before you can comment on or make changes to this bug.