REGRESSION(r285859) [GTK][WPE] a number of accessibility/* tests crash on GTK and WPE https://bugs.webkit.org/show_bug.cgi?id=233221

Patch by Arcady Goldmints-Orlov <agoldmints@igalia.com> on 2021-11-19
Reviewed by Carlos Garcia Campos.

Tools:

Add null checks in the ATK code to ensure AccessibilityUIElement::create()
is not passed a NULL pointer.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityControllerAtk.cpp:
(WTR::AccessibilityController::focusedElement):
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::getChildren):
(WTR::AccessibilityUIElement::getChildrenWithRange):

LayoutTests:

* platform/glib/TestExpectations:
* platform/glib/accessibility/add-children-pseudo-element-expected.txt:
* platform/glib/accessibility/aria-modal-text-descendants-expected.txt: Added.
* platform/glib/accessibility/table-cell-display-block-expected.txt: Added.


Canonical link: https://commits.webkit.org/244439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286052 268f45cc-cd09-0410-ab3c-d52691b4dbfc