Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityControllerAtk.cpp
@@ -117,6 +117,9 @@ RefPtr<AccessibilityUIElement> AccessibilityController::focusedElement()
     WKBundlePageRef page = InjectedBundle::singleton().page()->page();
     void* root = WKAccessibilityFocusedObject(page);
 
+    if (!ATK_IS_OBJECT(root))
+        return nullptr;
+
     return AccessibilityUIElement::create(static_cast<AtkObject*>(root));
 }
 
